# skin-cnn

./: .gitignore  pyproject.toml
skin/: manage.py  pyproject.toml
skin/accounts/: models.py  urls.py  views.py
skin/crop/: models.py  serializers.py  urls.py  views.py
skin/gemma/: models.py  serializers.py  urls.py  views.py
skin/skin/: asgi.py  settings.py  urls.py  wsgi.py
skin/weights/: 색소_78.pth
