[tool.poetry]
name = "skin-cnn"
version = "0.1.0"
description = ""
authors = ["0jjuni <133225625+0jjuni@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
