[tool.poetry]
name = "skin"
version = "0.1.0"
description = ""
authors = ["0jjuni <iyoung100009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.24.x"
django = "^4.2"
djangorestframework = "^3.15.2"
protobuf = "^4.25.3"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
